修改了嵌套结构体 无法传值的问题
